Planteado tres en raya

--- a/ahorcado copy muñequito.ipynb
+++ b/ahorcado copy muñequito.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -21,16 +21,10 @@
       "          |\n",
       "    =========\n",
       "********************************************\n",
-      "La letra indicada es c\n",
-      "Palabra oculta es: c _ c _ _\n",
+      "La letra indicada es e\n",
+      "Palabra oculta es: _ _ _ _ e\n",
       "********************************************\n",
-      "La letra indicada es o\n",
-      "Palabra oculta es: c o c _ _\n",
-      "********************************************\n",
-      "La letra indicada es c\n",
-      "Palabra oculta es: c o c _ _\n",
-      "********************************************\n",
-      "La letra indicada es k\n",
+      "La letra indicada es a\n",
       "\n",
       "      +---+\n",
       "      |   |\n",
@@ -40,7 +34,13 @@
       "          |\n",
       "          |\n",
       "    =========\n",
-      "La letra k no está en la palabra secreta 🙁. Te quedan 5 vidas\n",
+      "La letra a no está en la palabra secreta 🙁. Te quedan 5 vidas\n",
+      "********************************************\n",
+      "La letra indicada es o\n",
+      "Palabra oculta es: _ o _ _ e\n",
+      "********************************************\n",
+      "La letra indicada es c\n",
+      "Palabra oculta es: c o c _ e\n",
       "********************************************\n",
       "La letra indicada es k\n",
       "\n",
@@ -54,7 +54,7 @@
       "    =========\n",
       "La letra k no está en la palabra secreta 🙁. Te quedan 4 vidas\n",
       "********************************************\n",
-      "La letra indicada es l\n",
+      "La letra indicada es ñ\n",
       "\n",
       "      +---+\n",
       "      |   |\n",
@@ -64,14 +64,44 @@
       "          |\n",
       "          |\n",
       "    =========\n",
-      "La letra l no está en la palabra secreta 🙁. Te quedan 3 vidas\n",
+      "La letra ñ no está en la palabra secreta 🙁. Te quedan 3 vidas\n",
       "********************************************\n",
-      "La letra indicada es h\n",
-      "Palabra oculta es: c o c h _\n",
+      "La letra indicada es p\n",
+      "\n",
+      "      +---+\n",
+      "      |   |\n",
+      "      O   |\n",
+      "     /|\\  |\n",
+      "      |   |\n",
+      "          |\n",
+      "          |\n",
+      "    =========\n",
+      "La letra p no está en la palabra secreta 🙁. Te quedan 2 vidas\n",
       "********************************************\n",
-      "La letra indicada es e\n",
-      "Palabra oculta es: c o c h e\n",
-      "Felicidades, has adivinado la palabra oculta c o c h e 🎉\n"
+      "La letra indicada es ñ\n",
+      "\n",
+      "      +---+\n",
+      "      |   |\n",
+      "      O   |\n",
+      "     /|\\  |\n",
+      "      |   |\n",
+      "     /    |\n",
+      "          |\n",
+      "    =========\n",
+      "La letra ñ no está en la palabra secreta 🙁. Te quedan 1 vidas\n",
+      "********************************************\n",
+      "La letra indicada es ñ\n",
+      "\n",
+      "      +---+\n",
+      "      |   |\n",
+      "      O   |\n",
+      "    ===== |\n",
+      "     /|\\  |\n",
+      "      |   |\n",
+      "     / \\  |\n",
+      "          |\n",
+      "    =========\n",
+      "Has agotado todas tus vidas, el juego ha terminado 💀. La palabra secreta era coche\n"
      ]
     }
    ],
