--- a/tres_en_raya.ipynb
+++ b/tres_en_raya.ipynb
@@ -2,98 +2,91 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "          +-----+-----+-----+\n",
-      "          |  a  |  b  |  c  |\n",
-      "      _______________________\n",
-      "      | 1 |  -  |  -  |  -  |\n",
-      "      _______________________\n",
-      "      | 2 |  -  |  -  |  -  |\n",
-      "      _______________________\n",
-      "      | 3 |  -  |  -  |  -  |\n",
-      "      +---+-----+-----+-----+\n",
-      "      \n",
-      "['a1']\n",
-      "a1\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2495823181.py, line 42)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[9], line 42\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(f' Jugador {huecos_tablero['a1']} ¡¡¡Has ganado!!!') #cualquiera de las coordenadas. Vas a ser todas iguales\u001b[0m\n\u001b[0m                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "#tablero\n",
-    "a1='-'#####hay que hacer un diccionario \n",
-    "b1='-'\n",
-    "c1='-'\n",
-    "a2='-'\n",
-    "a2='-'\n",
-    "b2='-'\n",
-    "c2='-'\n",
-    "a3='-'\n",
-    "b3='-'\n",
-    "c3='-'\n",
+    "huecos_tablero = {'a1':'-', 'b1':'-', 'c1':'-', 'a2':'-', 'b2':'-', 'c2':'-', 'a3':'-', 'b3':'-', 'c3':'-'} \n",
+    "\n",
     "tablero = f'''\n",
     "          +-----+-----+-----+\n",
     "          |  a  |  b  |  c  |\n",
     "      _______________________\n",
-    "      | 1 |  {a1}  |  {b1}  |  {c1}  |\n",
+    "      | 1 |  {huecos_tablero['a1']}  |  {huecos_tablero['b1']}  |  {huecos_tablero['c1']}  |\n",
     "      _______________________\n",
-    "      | 2 |  {a2}  |  {b2}  |  {c2}  |\n",
+    "      | 2 |  {huecos_tablero['a2']}  |  {huecos_tablero['b2']}  |  {huecos_tablero['c2']}  |\n",
     "      _______________________\n",
-    "      | 3 |  {a3}  |  {b3}  |  {c3}  |\n",
+    "      | 3 |  {huecos_tablero['a3']}  |  {huecos_tablero['b3']}  |  {huecos_tablero['c3']}  |\n",
     "      +---+-----+-----+-----+\n",
     "      '''\n",
     "print(tablero)\n",
     "\n",
-    "#jugadores\n",
-    "# X\n",
-    "# O\n",
-    "#***************PDT : Cada jugador tiene 3 fichas y se ponen y se quitan???\n",
-    "\n",
-    "# Condiciones de win. Para cada ficha:\n",
-    "#     Si len (a1,b1,c1)=3 win,\n",
-    "#     Si len (a2,b2,c2)=3 win,\n",
-    "#     Si len (a3,b3,c3)=3 win,\n",
-    "#     Si len (a1,a2,a3)=3 win,\n",
-    "#     Si len (c1,c2,c3)=3 win,\n",
-    "#     Si len (a1,b2,c3)=3 win,\n",
-    "#     Si len (a3,B2.C1)=3 win,\n",
-    "\n",
-    "#Solicitar las coordenadas:\n",
-    "\n",
-    "#dame la coordenada letra (a,b,c)=letra_x o letra_y\n",
-    "#dame la coordenada número (1,2,3)=numero_x o numero_y\n",
-    "letra_x='a'#********poner un input************\n",
-    "numero_x='1'\n",
-    "\n",
-    "nombre_variable_x = [letra_x + numero_x]#imprime una lista con un solo valor\n",
-    "print(nombre_variable_x)\n",
-    "print(nombre_variable_x[0])#accedemos al primer valor por su índice y es el nombre de la variable con la que queremos interactuar\n",
-    "#*************hacer lo mismo con el jugador O ***********************\n",
+    "for coordenada in huecos_tablero:\n",
+    "# Juega X   \n",
     " \n",
-    "#comprobar que la coordenada está vacía\n",
-    "nombre_variable_x[0] == '-'\n",
+    "    coordenada_X = input('JUGADOR X, Dime la coordenada para tu ficha')\n",
+    "    while huecos_tablero[coordenada_X] != '-': #comprobando que el hueco está disponible\n",
+    "        print ('Ese hueco no está disponible')\n",
+    "        break\n",
+    "    else:    \n",
+    "        print('El hueco está disponible')#si lo está, cambia '-' por X\n",
+    "        huecos_tablero[coordenada_X]= 'X'\n",
     "\n",
-    "#cambiar el valor de la coordenada por O o X\n",
-    "#comprobar el tablero para ver si hay linea\n",
+    "# Juega O\n",
+    "    coordenada_O = input('JUGADOR O, Dime la coordenada para tu ficha')#igual con el jugador X\n",
+    "    while huecos_tablero[coordenada_O] != '-':\n",
+    "        print ('Ese hueco no está disponible')\n",
+    "        break\n",
+    "    else:\n",
+    "        print('El hueco está disponible')\n",
+    "        huecos_tablero[coordenada_O] = 'O'\n",
+    "        break\n",
     "\n",
+    "# Comprobando win\n",
     "\n",
-    "#coordenada = variable; el valor será O o X según sea el jugador\n",
+    "if len (set(['a1','b1','c1']))==3 and ['a1','b1','c1'] != ['-','-','-']:#hay que excluir '-'\n",
+    "    print(len(set(['a1','b1','c1'])))\n",
+    "    print(f' Jugador {huecos_tablero['a1']} ¡¡¡Has ganado!!!') #cualquiera de las coordenadas. Vas a ser todas iguales\n",
+    "   \n",
+    "elif len (set(['a2','b2','c2']))==3 and ['a2','b2','c2'] != ['-','-','-']:\n",
+    "    print(len(set(['a2','b2','c2'])))\n",
+    "    print(f' Jugador {huecos_tablero['a2']} ¡¡¡Has ganado!!!') \n",
+    "\n",
+    "elif len (set(['a3','b3','c3']))==3 and ['a3','b3','c3'] != ['-','-','-']:\n",
+    "    print(len(set(['a3','b3','c3'])))\n",
+    "    print(f' Jugador {huecos_tablero['a3']} ¡¡¡Has ganado!!!') \n",
+    "\n",
+    "elif len (set(['a1','a2','a3']))==3 and ['a1','a2','a3'] != ['-','-','-']:\n",
+    "    print(len(set(['a1','a2','a3'])))\n",
+    "    print(f' Jugador {huecos_tablero['a1']} ¡¡¡Has ganado!!!') \n",
+    "\n",
+    "elif len (set(['c1','c2','c3']))==3 and ['c1','c2','c3'] != ['-','-','-']:\n",
+    "    print(len(set(['c1','c2','c3'])))\n",
+    "    print(f' Jugador {huecos_tablero['c1']} ¡¡¡Has ganado!!!') \n",
+    "\n",
+    "elif len (set(['a1','b2','c3']))==3 and ['a1','b2','c3'] != ['-','-','-']:\n",
+    "    print(len(set(['a1','b2','c3'])))\n",
+    "    print(f' Jugador {huecos_tablero['a1']} ¡¡¡Has ganado!!!') \n",
+    "\n",
+    "elif len (set(['a1','b2','c3']))==3 and ['a1','b2','c3'] != ['-','-','-']:\n",
+    "    print(len(set(['a3','b2','c1'])))\n",
+    "    print(f' Jugador {huecos_tablero['a3']} ¡¡¡Has ganado!!!') \n",
+    "\n",
+    "else:\n",
+    "\n",
+    "    print(huecos_tablero)\n",
+    "        \n",
+    "  \n",
     "\n"
    ]
   }
