--- a/ahorcado.ipynb
+++ b/ahorcado.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -299,86 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Palabra oculta:  _  _  _  _  _  _  _ \n",
-      "La letra indicada es j\n",
-      "Palabra oculta es: j _ _ _ _ _ _\n",
-      "La letra indicada es 5\n",
-      "La letra 5 no está en la palabra secreta 🙁. Te quedan 5 vidas\n",
-      "La letra indicada es i\n",
-      "Palabra oculta es: j _ _ i _ _ _\n",
-      "La letra indicada es t\n",
-      "Palabra oculta es: j _ _ i t _ _\n",
-      "La letra indicada es e\n",
-      "Palabra oculta es: j _ _ i t e _\n",
-      "La letra indicada es r\n",
-      "Palabra oculta es: j _ _ i t e r\n",
-      "La letra indicada es uu\n",
-      "Debe ingresar solo 1 letra\n",
-      "La letra indicada es p\n",
-      "Palabra oculta es: j _ p i t e r\n",
-      "La letra indicada es i\n",
-      "Palabra oculta es: j _ p i t e r\n",
-      "La letra indicada es u\n",
-      "Palabra oculta es: j u p i t e r\n",
-      "Felicidades, has adivinado la palabra oculta j u p i t e r 🎉\n"
-     ]
-    }
-   ],
-   "source": [
-    "import random \n",
-    "# creamos lista de palabras secretas\n",
-    "palabras_secretas = [\"oro\", \"jupiter\", \"coche\"] \n",
-    "# Random choice para que el ordenador elija una palabra de manera aleatoria\n",
-    "palabra_secreta_aleatoria = random.choice(palabras_secretas) \n",
-    "# Contador de vidas restantes (por cada parte del cuerpo)\n",
-    "vidas_usuario = 6\n",
-    "# Encriptamos la palabra secreta con \"_\"\n",
-    "palabra_oculta = \" _ \" * len(palabra_secreta_aleatoria) # Dejamos espacios con el guión para que se vea el número de letras que tiene la palabra\n",
-    "print(f\"Palabra oculta: {palabra_oculta}\")\n",
-    "\n",
-    "while True:\n",
-    "    # Recogemos la letra del usuario\n",
-    "    letra_usuario = input(f\"Indica una letra de la {palabra_oculta}\").lower()\n",
-    "    print(f\"La letra indicada es {letra_usuario}\")\n",
-    "    # Protegemos que indique solo 1 letra\n",
-    "    if len(letra_usuario) > 1:\n",
-    "        print(f\"Debe ingresar solo 1 letra\")\n",
-    "    else:\n",
-    "        if letra_usuario in palabra_secreta_aleatoria: \n",
-    "            # Creamos lista de la palabra oculta y palabra_secreta_aleatoria para cambiar las letras que adivine el usuario mediente el índice de ambas listas\n",
-    "            palabra_oculta = palabra_oculta.replace(\" \",\"\") # Eliminamos el espacio del string de la palabra oculta para que no los incluya en la lista -> incluimos espacios para que se viera mejor el númeror de guiones \n",
-    "            palabra_oculta_lista = list(palabra_oculta)  \n",
-    "            palabra_secreta_aleatoria_lista = list(palabra_secreta_aleatoria) \n",
-    "            # Generamos un bucle for que iterará por los índices del rango de la palabra secreta -> i = 0, i = 1 ... así hasta el len de palabra_secreta_aleatoria_lista\n",
-    "            for i in range(len(palabra_secreta_aleatoria_lista)): \n",
-    "                # Obtenemos el índice donde está la letra del usuario dentro de la palabra secreta\n",
-    "                if palabra_secreta_aleatoria_lista[i] == letra_usuario: \n",
-    "                    # Sustituimos la letra del usuario en la palabra en la posición del índice obtenido\n",
-    "                    palabra_oculta_lista[i] = letra_usuario \n",
-    "            # Paso la palabra oculta lista a string para mostrarla al usuario -> join y usamos como delimitador \" \", porque quiero una cadena de texto con separación entre los guiones\n",
-    "            palabra_oculta = \" \".join(palabra_oculta_lista)\n",
-    "            print(f\"Palabra oculta es: {palabra_oculta}\")\n",
-    "            if \"_\" not in palabra_oculta:\n",
-    "                print(f\"Felicidades, has adivinado la palabra oculta {palabra_oculta} 🎉\")\n",
-    "                break\n",
-    "        else:\n",
-    "            vidas_usuario -= 1\n",
-    "            print(f\"La letra {letra_usuario} no está en la palabra secreta 🙁. Te quedan {vidas_usuario} vidas\")\n",
-    "            if vidas_usuario == 0:\n",
-    "                print(f\"Has agotado todas tus vidas, el juego ha terminado 💀. La palabra secreta era {palabra_secreta_aleatoria}\")\n",
-    "                break\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -386,18 +307,16 @@
      "output_type": "stream",
      "text": [
       "Palabra oculta:  _  _  _ \n",
-      "La letra indicada es 55\n",
-      "Debe ingresar una letra, no un número u otro carácter.\n",
-      "La letra indicada es 4\n",
-      "Debe ingresar una letra, no un número u otro carácter.\n",
-      "La letra indicada es *\n",
-      "Debe ingresar una letra, no un número u otro carácter.\n",
-      "La letra indicada es *\n",
-      "Debe ingresar una letra, no un número u otro carácter.\n",
       "La letra indicada es j\n",
       "La letra j no está en la palabra secreta 🙁. Te quedan 5 vidas\n",
       "La letra indicada es o\n",
       "Palabra oculta es: o _ o\n",
+      "La letra indicada es 5\n",
+      "Debe ingresar una letra, no un número u otro carácter.\n",
+      "La letra indicada es *\n",
+      "Debe ingresar una letra, no un número u otro carácter.\n",
+      "La letra indicada es r4\n",
+      "Debe ingresar una letra, no un número u otro carácter.\n",
       "La letra indicada es r\n",
       "Palabra oculta es: o r o\n",
       "Felicidades, has adivinado la palabra oculta o r o 🎉\n"
@@ -405,8 +324,6 @@
     }
    ],
    "source": [
-    "### QA \n",
-    "\n",
     "import random \n",
     "# creamos lista de palabras secretas\n",
     "palabras_secretas = [\"oro\", \"jupiter\", \"coche\"] \n",
