PPT Reglas de juego

--- a/PPT.ipynb
+++ b/PPT.ipynb
@@ -1,44 +1,52 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reglas del juego de \"Piedra, Papel o Tijera\"\n",
+    "\n",
+    "El jugador se enfrenta al ordenador en una serie de rondas de \"piedra, papel o tijera\".\n",
+    "El objetivo del juego es ser el primero en alcanzar 3 puntos.\n",
+    "\n",
+    "##### Cómo jugar:\n",
+    "\n",
+    "Al inicio de cada ronda, el ordenador escoge una opción al azar entre piedra, papel o tijera y el jugador elige una de las tres opciones. \n",
+    "Ambas opciones se comparan para determinar quién gana la ronda:\n",
+    "\n",
+    "Piedra vence a Tijera.\n",
+    "Tijera vence a Papel.\n",
+    "Papel vence a Piedra.\n",
+    "Si ambos jugadores eligen la misma opción, la ronda se considera un empate.\n",
+    "\n",
+    "##### Puntuación:\n",
+    "\n",
+    "Cada vez que el jugador gana una ronda, suma 1 punto.\n",
+    "Cada vez que el ordenador gana una ronda, suma 1 punto.\n",
+    "Si la ronda es un empate, no se otorgan puntos.\n",
+    "\n",
+    "Después de cada ronda, se muestra el marcador actual con los puntos del jugador y del ordenador.\n",
+    "También se indica si el jugador ganó, perdió o empató la ronda.\n",
+    "\n",
+    "##### Fin del juego:\n",
+    "\n",
+    "El juego finaliza cuando uno de los jugadores (el jugador o el ordenador) alcanza los 3 puntos.\n",
+    "Si el jugador gana, se muestra un mensaje de felicitación. \n",
+    "Si el ordenador gana, se muestra un mensaje indicando la derrota."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Hacer un import random (para que el sistema elija una opción aleatoria entre Piedra, Papel o Tijera)\n",
-    "\n",
     "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Introducción al juego: \n",
-    "\n",
-    "# Reglas del Juego \"Piedra, Papel y Tijera\":\n",
-    "\n",
-    "# Dos jugadores eligen una de las tres opciones: \"Piedra\", \"Papel\" o \"Tijera\".\n",
-    "\n",
-    "# Las reglas para determinar al ganador son:\n",
-    "        \n",
-    "# Piedra vence a Tijera.\n",
-    "\n",
-    "# Tijera vence a Papel.\n",
-    "\n",
-    "# Papel vence a Piedra.\n",
-    "\n",
-    "#El jugador que gana una ronda obtiene un punto.\n",
-    "        \n",
-    "#El juego continúa hasta que un jugador haya acumulado 3 puntos, convirtiéndose en el ganador.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -46,29 +54,24 @@
      "output_type": "stream",
      "text": [
       "Tu respuesta: piedra\n",
-      "Respuesta ordenador: tijera\n",
+      "Respuesta ordenador: piedra\n",
+      "Empate\n",
+      "Marcador: usuario: 0 - ordenador: 0\n",
+      "---------------------------------\n",
+      "Tu respuesta: papel\n",
+      "Respuesta ordenador: piedra\n",
       "Has ganado esta ronda\n",
       "Marcador: usuario: 1 - ordenador: 0\n",
       "---------------------------------\n",
       "Tu respuesta: papel\n",
-      "Respuesta ordenador: tijera\n",
-      "Has perdido esta ronda\n",
-      "Marcador: usuario: 1 - ordenador: 1\n",
-      "---------------------------------\n",
-      "Tu respuesta: tijera\n",
-      "Respuesta ordenador: tijera\n",
-      "Empate\n",
-      "Marcador: usuario: 1 - ordenador: 1\n",
-      "---------------------------------\n",
-      "Tu respuesta: piedra\n",
-      "Respuesta ordenador: tijera\n",
+      "Respuesta ordenador: piedra\n",
       "Has ganado esta ronda\n",
-      "Marcador: usuario: 2 - ordenador: 1\n",
+      "Marcador: usuario: 2 - ordenador: 0\n",
       "---------------------------------\n",
-      "Tu respuesta: piedra\n",
-      "Respuesta ordenador: tijera\n",
+      "Tu respuesta: papel\n",
+      "Respuesta ordenador: piedra\n",
       "Has ganado esta ronda\n",
-      "Marcador: usuario: 3 - ordenador: 1\n",
+      "Marcador: usuario: 3 - ordenador: 0\n",
       "---------------------------------\n",
       "¡Felicitaciones! Has ganado! 🎉\n"
      ]
@@ -133,7 +136,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
