--- a/tres_en_raya.ipynb
+++ b/tres_en_raya.ipynb
@@ -2,15 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2495823181.py, line 42)",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "          +-----+-----+-----+\n",
+      "          |  a  |  b  |  c  |\n",
+      "      _______________________\n",
+      "      | 1 |  -  |  -  |  -  |\n",
+      "      _______________________\n",
+      "      | 2 |  -  |  -  |  -  |\n",
+      "      _______________________\n",
+      "      | 3 |  -  |  -  |  -  |\n",
+      "      +---+-----+-----+-----+\n",
+      "      \n",
+      "El hueco está disponible\n",
+      "El hueco está disponible\n",
+      "['X', '-', '-', '-', 'O', '-', '-', '-', '-']\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[9], line 42\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(f' Jugador {huecos_tablero['a1']} ¡¡¡Has ganado!!!') #cualquiera de las coordenadas. Vas a ser todas iguales\u001b[0m\n\u001b[0m                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 59\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[38;5;28mprint\u001b[39m (lista_valores_tablero)\n\u001b[1;32m     40\u001b[0m \u001b[38;5;66;03m#sustituir - por 0\u001b[39;00m\n\u001b[1;32m     41\u001b[0m \u001b[38;5;66;03m#sustituir X por 1\u001b[39;00m\n\u001b[1;32m     42\u001b[0m \u001b[38;5;66;03m#sustituir O por 4\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     56\u001b[0m \n\u001b[1;32m     57\u001b[0m \u001b[38;5;66;03m# Comprobando win\u001b[39;00m\n\u001b[0;32m---> 59\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28;43msum\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mlista_valores_tablero\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[1;32m     60\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28msum\u001b[39m(lista_valores_tablero[\u001b[38;5;241m0\u001b[39m:\u001b[38;5;241m3\u001b[39m]))\n\u001b[1;32m     61\u001b[0m     \u001b[38;5;66;03m#ganador = huecos_tablero['a1']\u001b[39;00m\n\u001b[1;32m     62\u001b[0m     \u001b[38;5;66;03m#print(f' Jugador {ganador} ¡¡¡Has ganado!!!') #cualquiera de las coordenadas. Vas a ser todas iguales\u001b[39;00m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
      ]
     }
    ],
@@ -51,36 +74,62 @@
     "        print('El hueco está disponible')\n",
     "        huecos_tablero[coordenada_O] = 'O'\n",
     "        break\n",
+    "lista_valores_tablero = list(huecos_tablero.values())\n",
+    "print (lista_valores_tablero)\n",
+    "\n",
+    "#sustituir - por 0\n",
+    "#sustituir X por 1\n",
+    "#sustituir O por 4\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#si suma de las lineas = 0, nada\n",
+    "#si suma de las lineas = 3 , X win\n",
+    "#si suma de las lineas = 12 , O win\n",
+    "#si suma de las lineas diferente a los anteriores, nada\n",
+    "\n",
+    "#a1,b1,c1,a2,b2,c2,a3,b3,c3\n",
+    "# 0, 1, 2, 3, 4, 5, 6, 7, 8\n",
     "\n",
     "# Comprobando win\n",
     "\n",
-    "if len (set(['a1','b1','c1']))==3 and ['a1','b1','c1'] != ['-','-','-']:#hay que excluir '-'\n",
-    "    print(len(set(['a1','b1','c1'])))\n",
-    "    print(f' Jugador {huecos_tablero['a1']} ¡¡¡Has ganado!!!') #cualquiera de las coordenadas. Vas a ser todas iguales\n",
+    "if sum(lista_valores_tablero[0:3]):\n",
+    "    print(sum(lista_valores_tablero[0:3]))\n",
+    "    #ganador = huecos_tablero['a1']\n",
+    "    #print(f' Jugador {ganador} ¡¡¡Has ganado!!!') #cualquiera de las coordenadas. Vas a ser todas iguales\n",
     "   \n",
     "elif len (set(['a2','b2','c2']))==3 and ['a2','b2','c2'] != ['-','-','-']:\n",
     "    print(len(set(['a2','b2','c2'])))\n",
-    "    print(f' Jugador {huecos_tablero['a2']} ¡¡¡Has ganado!!!') \n",
+    "    ganador=huecos_tablero['a2']\n",
+    "    print(f' Jugador {ganador} ¡¡¡Has ganado!!!') \n",
     "\n",
     "elif len (set(['a3','b3','c3']))==3 and ['a3','b3','c3'] != ['-','-','-']:\n",
     "    print(len(set(['a3','b3','c3'])))\n",
-    "    print(f' Jugador {huecos_tablero['a3']} ¡¡¡Has ganado!!!') \n",
+    "    ganador=huecos_tablero['a3']\n",
+    "    print(f' Jugador {ganador} ¡¡¡Has ganado!!!')\n",
     "\n",
     "elif len (set(['a1','a2','a3']))==3 and ['a1','a2','a3'] != ['-','-','-']:\n",
     "    print(len(set(['a1','a2','a3'])))\n",
-    "    print(f' Jugador {huecos_tablero['a1']} ¡¡¡Has ganado!!!') \n",
+    "    ganador=huecos_tablero['a1']\n",
+    "    print(f' Jugador {ganador} ¡¡¡Has ganado!!!') \n",
     "\n",
     "elif len (set(['c1','c2','c3']))==3 and ['c1','c2','c3'] != ['-','-','-']:\n",
     "    print(len(set(['c1','c2','c3'])))\n",
-    "    print(f' Jugador {huecos_tablero['c1']} ¡¡¡Has ganado!!!') \n",
+    "    ganador=huecos_tablero['c1']    \n",
+    "    print(f' Jugador {ganador} ¡¡¡Has ganado!!!')\n",
     "\n",
     "elif len (set(['a1','b2','c3']))==3 and ['a1','b2','c3'] != ['-','-','-']:\n",
     "    print(len(set(['a1','b2','c3'])))\n",
-    "    print(f' Jugador {huecos_tablero['a1']} ¡¡¡Has ganado!!!') \n",
+    "    ganador=huecos_tablero['a1']\n",
+    "    print(f' Jugador {ganador} ¡¡¡Has ganado!!!') \n",
     "\n",
     "elif len (set(['a1','b2','c3']))==3 and ['a1','b2','c3'] != ['-','-','-']:\n",
     "    print(len(set(['a3','b2','c1'])))\n",
-    "    print(f' Jugador {huecos_tablero['a3']} ¡¡¡Has ganado!!!') \n",
+    "    ganador=huecos_tablero['a3']\n",
+    "    print(f' Jugador {ganador} ¡¡¡Has ganado!!!') \n",
     "\n",
     "else:\n",
     "\n",
