--- a/AHO.ipynb
+++ b/AHO.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Palabra oculta:  _  _  _  _  _ \n",
+      "Palabra oculta:  _  _  _  _  _  _  _ \n",
       "Empieza el juego!!!!!\n",
       "\n",
       "      +---+\n",
@@ -21,10 +21,7 @@
       "          |\n",
       "    =========\n",
       "********************************************\n",
-      "La letra indicada es e\n",
-      "Palabra oculta es: _ _ _ _ e\n",
-      "********************************************\n",
-      "La letra indicada es a\n",
+      "La letra indicada es h\n",
       "\n",
       "      +---+\n",
       "      |   |\n",
@@ -34,15 +31,12 @@
       "          |\n",
       "          |\n",
       "    =========\n",
-      "La letra a no está en la palabra secreta 🙁. Te quedan 5 vidas\n",
+      "La letra h no está en la palabra oculta 🙁:  _  _  _  _  _  _  _  . Te quedan 5 vidas\n",
       "********************************************\n",
-      "La letra indicada es o\n",
-      "Palabra oculta es: _ o _ _ e\n",
+      "La letra indicada es j\n",
+      "Palabra oculta es: j _ _ _ _ _ _\n",
       "********************************************\n",
-      "La letra indicada es c\n",
-      "Palabra oculta es: c o c _ e\n",
-      "********************************************\n",
-      "La letra indicada es k\n",
+      "La letra indicada es y\n",
       "\n",
       "      +---+\n",
       "      |   |\n",
@@ -52,9 +46,9 @@
       "          |\n",
       "          |\n",
       "    =========\n",
-      "La letra k no está en la palabra secreta 🙁. Te quedan 4 vidas\n",
+      "La letra y no está en la palabra oculta 🙁: j _ _ _ _ _ _ . Te quedan 4 vidas\n",
       "********************************************\n",
-      "La letra indicada es ñ\n",
+      "La letra indicada es y\n",
       "\n",
       "      +---+\n",
       "      |   |\n",
@@ -64,9 +58,21 @@
       "          |\n",
       "          |\n",
       "    =========\n",
-      "La letra ñ no está en la palabra secreta 🙁. Te quedan 3 vidas\n",
+      "La letra y no está en la palabra oculta 🙁: j _ _ _ _ _ _ . Te quedan 3 vidas\n",
       "********************************************\n",
-      "La letra indicada es p\n",
+      "La letra indicada es t\n",
+      "Palabra oculta es: j _ _ _ t _ _\n",
+      "********************************************\n",
+      "La letra indicada es ff\n",
+      "Debe ingresar solo 1 letra\n",
+      "********************************************\n",
+      "La letra indicada es 8\n",
+      "Debe ingresar una letra, no un número u otro carácter.\n",
+      "********************************************\n",
+      "La letra indicada es u\n",
+      "Palabra oculta es: j u _ _ t _ _\n",
+      "********************************************\n",
+      "La letra indicada es q\n",
       "\n",
       "      +---+\n",
       "      |   |\n",
@@ -76,9 +82,9 @@
       "          |\n",
       "          |\n",
       "    =========\n",
-      "La letra p no está en la palabra secreta 🙁. Te quedan 2 vidas\n",
+      "La letra q no está en la palabra oculta 🙁: j u _ _ t _ _ . Te quedan 2 vidas\n",
       "********************************************\n",
-      "La letra indicada es ñ\n",
+      "La letra indicada es q\n",
       "\n",
       "      +---+\n",
       "      |   |\n",
@@ -88,20 +94,23 @@
       "     /    |\n",
       "          |\n",
       "    =========\n",
-      "La letra ñ no está en la palabra secreta 🙁. Te quedan 1 vidas\n",
+      "La letra q no está en la palabra oculta 🙁: j u _ _ t _ _ . Te quedan 1 vidas\n",
       "********************************************\n",
-      "La letra indicada es ñ\n",
-      "\n",
-      "      +---+\n",
-      "      |   |\n",
-      "      O   |\n",
-      "    ===== |\n",
-      "     /|\\  |\n",
-      "      |   |\n",
-      "     / \\  |\n",
-      "          |\n",
-      "    =========\n",
-      "Has agotado todas tus vidas, el juego ha terminado 💀. La palabra secreta era coche\n"
+      "La letra indicada es p\n",
+      "Palabra oculta es: j u p _ t _ _\n",
+      "********************************************\n",
+      "La letra indicada es p\n",
+      "Palabra oculta es: j u p _ t _ _\n",
+      "********************************************\n",
+      "La letra indicada es i\n",
+      "Palabra oculta es: j u p i t _ _\n",
+      "********************************************\n",
+      "La letra indicada es e\n",
+      "Palabra oculta es: j u p i t e _\n",
+      "********************************************\n",
+      "La letra indicada es r\n",
+      "Palabra oculta es: j u p i t e r\n",
+      "Felicidades, has adivinado la palabra oculta jupiter 🎉\n"
      ]
     }
    ],
@@ -175,7 +184,11 @@
     "     / \\  |\n",
     "          |\n",
     "    ========='''\n",
-    "import random \n",
+    "\n",
+    "import random #seleccionar palabras aleatorias de la lista\n",
+    "import warnings \n",
+    "warnings.filterwarnings(\"ignore\", category=SyntaxWarning) #ignorar advertencia en el código al mostrar el muñequito del ahorcado\n",
+    "\n",
     "# creamos lista de palabras secretas\n",
     "palabras_secretas = [\"oro\", \"jupiter\", \"coche\"] \n",
     "# Random choice para que el ordenador elija una palabra de manera aleatoria\n",
@@ -190,12 +203,15 @@
     "\n",
     "while True:\n",
     "    # Recogemos la letra del usuario\n",
-    "    letra_usuario = input(f\"Indica una letra de la {palabra_oculta}\").lower()\n",
+    "    letra_usuario = input(f\"Indica una letra de la palabra oculta: {palabra_oculta}\").lower()\n",
     "    print('********************************************')\n",
     "    print(f\"La letra indicada es {letra_usuario}\")\n",
+    "    # Verificar si el usuario ingresó un número o un carácter que no sea una letra\n",
+    "    if not letra_usuario.isalpha():\n",
+    "        print(\"Debe ingresar una letra, no un número u otro carácter.\")\n",
+    "        continue  # Reinicia para que vuelva a intentar\n",
     "    # Protegemos que indique solo 1 letra\n",
     "    if len(letra_usuario) > 1:\n",
-    "        print('!!!!!!!!!!!!!!!!!!!!!!!!!!!!')\n",
     "        print(f\"Debe ingresar solo 1 letra\")\n",
     "    else:\n",
     "        if letra_usuario in palabra_secreta_aleatoria: \n",
@@ -213,13 +229,13 @@
     "            palabra_oculta = \" \".join(palabra_oculta_lista)\n",
     "            print(f\"Palabra oculta es: {palabra_oculta}\")\n",
     "            if \"_\" not in palabra_oculta:\n",
-    "                print(f\"Felicidades, has adivinado la palabra oculta {palabra_oculta} 🎉\")\n",
+    "                print(f\"Felicidades, has adivinado la palabra oculta: {palabra_secreta_aleatoria} 🎉\")\n",
     "                break\n",
     "        else:\n",
     "            vidas_usuario -= 1\n",
     "            if vidas_usuario == 0:\n",
     "                print(g)\n",
-    "                print(f\"Has agotado todas tus vidas, el juego ha terminado 💀. La palabra secreta era {palabra_secreta_aleatoria}\")\n",
+    "                print(f\"Has agotado todas tus vidas, el juego ha terminado 💀. La palabra secreta era: {palabra_secreta_aleatoria}\")\n",
     "                break\n",
     "            \n",
     "            elif vidas_usuario == 5:\n",
@@ -232,98 +248,16 @@
     "                print(e)\n",
     "            elif vidas_usuario == 1:\n",
     "                print(f)\n",
-    "            print(f\"La letra {letra_usuario} no está en la palabra secreta 🙁. Te quedan {vidas_usuario} vidas\")\n",
+    "            print(f\"La letra {letra_usuario} no está en la palabra oculta 🙁: {palabra_oculta} . Te quedan {vidas_usuario} vidas\")\n",
     "    \n",
     "            \n",
-    "            \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Palabra oculta:  _  _  _ \n",
-      "La letra indicada es 55\n",
-      "Debe ingresar una letra, no un número u otro carácter.\n",
-      "La letra indicada es 4\n",
-      "Debe ingresar una letra, no un número u otro carácter.\n",
-      "La letra indicada es *\n",
-      "Debe ingresar una letra, no un número u otro carácter.\n",
-      "La letra indicada es *\n",
-      "Debe ingresar una letra, no un número u otro carácter.\n",
-      "La letra indicada es j\n",
-      "La letra j no está en la palabra secreta 🙁. Te quedan 5 vidas\n",
-      "La letra indicada es o\n",
-      "Palabra oculta es: o _ o\n",
-      "La letra indicada es r\n",
-      "Palabra oculta es: o r o\n",
-      "Felicidades, has adivinado la palabra oculta o r o 🎉\n"
-     ]
-    }
-   ],
-   "source": [
-    "### QA \n",
-    "\n",
-    "import random \n",
-    "# creamos lista de palabras secretas\n",
-    "palabras_secretas = [\"oro\", \"jupiter\", \"coche\"] \n",
-    "# Random choice para que el ordenador elija una palabra de manera aleatoria\n",
-    "palabra_secreta_aleatoria = random.choice(palabras_secretas) \n",
-    "# Contador de vidas restantes (por cada parte del cuerpo)\n",
-    "vidas_usuario = 6\n",
-    "# Encriptamos la palabra secreta con \"_\"\n",
-    "palabra_oculta = \" _ \" * len(palabra_secreta_aleatoria) # Dejamos espacios con el guión para que se vea el número de letras que tiene la palabra\n",
-    "print(f\"Palabra oculta: {palabra_oculta}\")\n",
-    "\n",
-    "while True:\n",
-    "    # Recogemos la letra del usuario\n",
-    "    letra_usuario = input(f\"Indica una letra de la palabra oculta: {palabra_oculta}\").lower()\n",
-    "    print(f\"La letra indicada es {letra_usuario}\")\n",
-    "\n",
-    "   # Verificar si el usuario ingresó un número o un carácter que no sea una letra\n",
-    "    if not letra_usuario.isalpha():\n",
-    "        print(\"Debe ingresar una letra, no un número u otro carácter.\")\n",
-    "        continue  # Reinicia para que vuelva a intentar\n",
-    "    # Protegemos que indique solo 1 letra\n",
-    "    if len(letra_usuario) > 1:\n",
-    "        print(f\"Debe ingresar solo 1 letra\")\n",
-    "        continue  # Reinicia para que el vuelva a intentar\n",
-    "\n",
-    "    else:\n",
-    "        if letra_usuario in palabra_secreta_aleatoria: \n",
-    "            # Creamos lista de la palabra oculta y palabra_secreta_aleatoria para cambiar las letras que adivine el usuario mediente el índice de ambas listas\n",
-    "            palabra_oculta = palabra_oculta.replace(\" \",\"\") # Eliminamos el espacio del string de la palabra oculta para que no los incluya en la lista -> incluimos espacios para que se viera mejor el númeror de guiones \n",
-    "            palabra_oculta_lista = list(palabra_oculta)  \n",
-    "            palabra_secreta_aleatoria_lista = list(palabra_secreta_aleatoria) \n",
-    "            # Generamos un bucle for que iterará por los índices del rango de la palabra secreta -> i = 0, i = 1 ... así hasta el len de palabra_secreta_aleatoria_lista\n",
-    "            for i in range(len(palabra_secreta_aleatoria_lista)): \n",
-    "                # Obtenemos el índice donde está la letra del usuario dentro de la palabra secreta\n",
-    "                if palabra_secreta_aleatoria_lista[i] == letra_usuario: \n",
-    "                    # Sustituimos la letra del usuario en la palabra en la posición del índice obtenido\n",
-    "                    palabra_oculta_lista[i] = letra_usuario \n",
-    "            # Paso la palabra oculta lista a string para mostrarla al usuario -> join y usamos como delimitador \" \", porque quiero una cadena de texto con separación entre los guiones\n",
-    "            palabra_oculta = \" \".join(palabra_oculta_lista)\n",
-    "            print(f\"Palabra oculta es: {palabra_oculta}\")\n",
-    "            if \"_\" not in palabra_oculta:\n",
-    "                print(f\"Felicidades, has adivinado la palabra oculta {palabra_oculta} 🎉\")\n",
-    "                break\n",
-    "        else:\n",
-    "            vidas_usuario -= 1\n",
-    "            print(f\"La letra {letra_usuario} no está en la palabra secreta 🙁. Te quedan {vidas_usuario} vidas\")\n",
-    "            if vidas_usuario == 0:\n",
-    "                print(f\"Has agotado todas tus vidas, el juego ha terminado 💀. La palabra secreta era {palabra_secreta_aleatoria}\")\n",
-    "                break"
+    "            "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -337,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
